remove z-index homepage - fixes context menus

--- a/web/src/tailwindcss/homepage.css
+++ b/web/src/tailwindcss/homepage.css
@@ -8,7 +8,7 @@
     }
 
     .super-sect-base-description {
-        @apply text-balance font-bold relative z-10 w-3/4;
+        @apply text-balance font-bold relative w-3/4;
     }
 
     .super-sect {
@@ -26,7 +26,7 @@
     .super-sect-1, .super-sect-2 {
         @apply super-sect-base;
         sl-icon, .description {
-            @apply z-10 opacity-100 duration-1200 delay-300;
+            @apply opacity-100 duration-1200 delay-300;
         }
         sl-icon {
             @apply text-7xl w-1/4 drop-shadow-lg;
